@@ -108,7 +108,14 @@ class LadybugControlPanel(module: LadybugModule) extends ControlPanel(module) {
   }
   val f = new FlowPanel
   f.contents += new TraceControlPanel(module.getPathVisibilityModel)
-  f.contents += new Button("Clear") {reactions += {case ButtonClicked(_) => module.model.clearHistory}}
+  f.contents += new Button("Clear") {
+      reactions += {
+          case ButtonClicked(_) => {
+              module.model.clearHistory
+              module.model.setPaused(true)
+          }
+      }
+  }
   addControl(f)
   addControl(createBox)
 
