@@ -1,5 +1,6 @@
 > Blue timeline color matches the trace color
 > Timeline blue line thinner so that it looks more like "inside" the timeline
+> When you hit "clear" button for trace, recording should not begin until you move the bug (like start up state). Bug will stay in last position, and clear the trace and recording, but not begin recording until bug is moved.
 
 # 1.20.26 (28105) Feb 5, 2009
 > Added fade feature on dot trace
